[gd_scene load_steps=5 format=3 uid="uid://bdtcurhcyyarc"]

[ext_resource type="Script" path="res://scripts/weapons/projectiles/propulsion/base.gd" id="1_1sl8i"]
[ext_resource type="ArrayMesh" uid="uid://b2udg1a0ewd6k" path="res://Models/Weapons/ammo_pistol.obj" id="2_uuakd"]

[sub_resource type="SphereShape3D" id="SphereShape3D_tdbp8"]
radius = 2.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gfaj1"]
radius = 0.1
height = 0.3

[node name="PropulsionProjectile" type="RigidBody3D"]
collision_layer = 2
collision_mask = 2
mass = 0.1
gravity_scale = 0.8
max_contacts_reported = 8
contact_monitor = true
script = ExtResource("1_1sl8i")

[node name="DamageRadius" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="DamageCollider" type="CollisionShape3D" parent="DamageRadius"]
shape = SubResource("SphereShape3D_tdbp8")

[node name="GrenadeCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.00910518, 0.00896889)
shape = SubResource("CapsuleShape3D_gfaj1")

[node name="Shell" type="MeshInstance3D" parent="."]
transform = Transform3D(15, 0, 0, 0, -6.55671e-07, 15, 0, -15, -6.55671e-07, 0, 0, 0)
mesh = ExtResource("2_uuakd")

[connection signal="body_entered" from="." to="." method="give_damage"]
